--- a/src/styles.css
+++ b/src/styles.css
@@ -93,7 +93,7 @@ nav div {
       @media only screen and (min-width: 400px) {
         .dropbtn {
           font-size: 2rem;
-          padding: 0.4rem 0.6rem;
+          padding: 0.4rem 1rem 0.6rem;
         }
       }
     
