--- a/src/styles.css
+++ b/src/styles.css
@@ -79,8 +79,8 @@ nav div {
         background-color: var(--KAH-med-blue);
         color: var(--KAH-lighter-blue);
         margin: 0.2rem auto;
-        padding: 0.2rem;
-        font-size: 2.4rem;
+        padding: 0.3rem 0.4rem 0.5rem;
+        font-size: 2.3rem;
         font-weight: 900;
         text-align: center;
         line-height: 1.8rem;
