--- a/src/styles.css
+++ b/src/styles.css
@@ -94,7 +94,7 @@ nav div {
 
       @media only screen and (max-width: 400px) {
         .dropbtn {
-         padding: 0;
+         padding-bottom: 0.4rem;
         }
       }
     
