--- a/src/styles.css
+++ b/src/styles.css
@@ -95,6 +95,7 @@ nav div {
       @media only screen and (max-width: 400px) {
         .dropbtn {
          padding-bottom: 0.4rem;
+         padding-top: -0.4rem;
          font-size: 2.4rem;
         }
       }
