--- a/src/styles.css
+++ b/src/styles.css
@@ -95,7 +95,7 @@ nav div {
       @media only screen and (max-width: 400px) {
         .dropbtn {
          padding-bottom: 0.4rem;
-         padding-top: -1rem;
+            line-height: 1rem;
          font-size: 2rem;
         }
       }
