--- a/src/styles.css
+++ b/src/styles.css
@@ -94,9 +94,10 @@ nav div {
 
       @media only screen and (max-width: 400px) {
         .dropbtn {
+            margin: 0 auto;
          padding-bottom: 0.4rem;
             line-height: 1rem;
-            font-size: 2rem;
+            font-size: 2.4rem;
         }
       }
     
