--- a/src/styles.css
+++ b/src/styles.css
@@ -95,7 +95,7 @@ nav div {
       @media only screen and (max-width: 400px) {
         .dropbtn {
             margin: 0 auto;
-         padding-bottom: 1rem;
+         padding-bottom: 0.2rem 1rem;
             line-height: 1rem;
             font-size: 2.8rem;
         }
